// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Limited Reserve Transfers from HydraDx Account Bob -> Spiritnet > receiver events Balances 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "who": "4qXPdpioJ6D8cgdeYXaukV2Y2oAQUHaX1VnGhdbSRqJn2CBt",
    },
    "method": "Withdraw",
    "section": "balances",
  },
]
`;

exports[`Limited Reserve Transfers from HydraDx Account Bob -> Spiritnet > receiver events Balances 2`] = `
[
  {
    "data": {
      "account": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "freeBalance": "(rounded 1000000000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Limited Reserve Transfers from HydraDx Account Bob -> Spiritnet > receiver events xcmpQueue 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Limited Reserve Transfers from HydraDx Account Bob -> Spiritnet > sender events currencies 1`] = `
[
  {
    "data": {
      "amount": "(rounded 440000000000)",
      "currencyId": 0,
      "who": "7MZG43idRmdg8VSt5BS9mVJeBhhxxt5y55hCsMpoKp5xFQX2",
    },
    "method": "Withdrawn",
    "section": "currencies",
  },
  {
    "data": {
      "amount": 1000000000000000,
      "currencyId": 60,
      "who": "7MZG43idRmdg8VSt5BS9mVJeBhhxxt5y55hCsMpoKp5xFQX2",
    },
    "method": "Withdrawn",
    "section": "currencies",
  },
]
`;

exports[`Limited Reserve Transfers from HydraDx Account Bob -> Spiritnet > sender events currencies 2`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000000000000,
          },
          "id": {
            "Concrete": {
              "interior": {
                "X1": {
                  "Parachain": "(rounded 2100)",
                },
              },
              "parents": 1,
            },
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2100)",
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000000000000,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X1": {
                "Parachain": "(rounded 2100)",
              },
            },
            "parents": 1,
          },
        },
      },
      "sender": "7MZG43idRmdg8VSt5BS9mVJeBhhxxt5y55hCsMpoKp5xFQX2",
    },
    "method": "TransferredMultiAssets",
    "section": "xTokens",
  },
]
`;

exports[`Limited Reserve Transfers from HydraDx Account Bob -> Spiritnet > sender events xcm queue pallet 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;
